--- a/app/src/main/res/layout/ticket_item_row_design.xml
+++ b/app/src/main/res/layout/ticket_item_row_design.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
-    app:cardElevation="8dp"
     android:layout_margin="@dimen/defaultDpMargin"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="@color/white"
+    app:cardElevation="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -24,30 +24,99 @@
 
 
             <com.google.android.material.textview.MaterialTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/largeText"
                 android:id="@+id/ticket_item_title_view"
-                android:textColor="@color/black"
-                />
-
-            <com.google.android.material.textview.MaterialTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/mediumText"
+                android:textColor="@color/black"
+                android:textSize="@dimen/largeText" />
+
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/ticket_item_message_view"
-                android:textColor="@color/black"
-                android:layout_marginTop="@dimen/eightDpMargin"
-                />
-
-            <com.google.android.material.textview.MaterialTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/largeText"
-                android:id="@+id/ticket_item_status_view"
+                android:layout_marginTop="@dimen/eightDpMargin"
+                android:textColor="@color/black"
+                android:textSize="@dimen/mediumText" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/ticket_item_date_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/eightDpMargin"
                 android:textColor="@color/black"
                 android:layout_gravity="end"
-                />
+                android:textSize="@dimen/mediumText" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="@dimen/eightDpMargin"
+                android:background="@drawable/top_border"
+                android:gravity="center_vertical"
+                android:baselineAligned="false">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:id="@+id/ticket_last_reply_view"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/mediumText" />
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:id="@+id/ticket_last_reply_by_view"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/mediumText" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center_horizontal"
+                    android:orientation="vertical">
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/ticket_status_heading_view"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/mediumText" />
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:background="@drawable/full_border"
+                        >
+                        <androidx.appcompat.widget.AppCompatSpinner
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/ticket_item_status_spinner"
+                            android:entries="@array/ticket_status"
+                            />
+                    </LinearLayout>
+
+<!--                    <com.google.android.material.textview.MaterialTextView-->
+<!--                        android:id="@+id/ticket_item_status_view"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:textColor="@color/black"-->
+<!--                        android:textSize="@dimen/smallText"-->
+<!--                        android:textStyle="bold" />-->
+                </LinearLayout>
+
+            </LinearLayout>
+
+
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
